# gsltctrl-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
src/: cli.rs  jsonutil.rs  main.rs
