[package]
name = "gsltctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={version = "0.11", features = ["blocking","json"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
clap={version = "3.2", features = ["derive"]}
